# nyc-taxi-pipeline

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  nyc-taxi-diagram.drawio  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: terraform-ci.yml
airflow/dags/: elt_pipeline_dag.py
dbt_nyc_taxi/: dbt_project.yml
dbt_nyc_taxi/models/: sources.yml
dbt_nyc_taxi/models/marts/: dim_datetime.sql  dim_weather.sql  dim_zones.sql  fct_trips.sql  kpi_trip_duration_by_weather.sql  marts.yml
dbt_nyc_taxi/models/staging/: staging.yml  stg_noaa_weather_data.sql  stg_yellow_tripdata.sql
models/: schema.yml
notebooks/: date_explore.redshiftnb
notebooks/noaa_api_exploration/: noaa_exploration.ipynb
redshift_setup/: 01_create_schema.sql  02_create_raw_tables.sql  03_copy_data.sql
scripts/: airflow_setup.sh  build_lambda_package.sh
src/nyc_taxi_pipeline/: __init__.py
streamlit_app/: app.py
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: iam_ec2_roles.tf  iam_github_actions_role.tf  iam_lambda_roles.tf  iam_redshift_roles.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  variables.tf  vpc_endpoints.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/redshift/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets_manager/: main.tf  outputs.tf  variables.tf
(+12 files in other folders)
