[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyc_taxi_pipeline"
version = "0.1.0"
description = "NYC Taxi + Weather Modern Data‑Warehouse Pipeline"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow>=2.7.0",
    "dbt-core>=1.7.0",
    "dbt-redshift>=1.7.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
